--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,8 @@
 services:
-  - type: web
-    name: tiktok-bot
-    env: python
-    region: oregon
-    plan: free
-    branch: main
+  - type: worker
+    name: render-bot
+    runtime: python
     buildCommand: |
       pip install -r requirements.txt
       playwright install
-    startCommand: |
-      python tiktik.py
+    startCommand: python Renderbot.py
