--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,11 @@
 services:
-  - type: worker
-    name: render-bot
+  - type: web
+    name: telegram-bot
     runtime: python
-    buildCommand: |
-      pip install -r requirements.txt
-      playwright install
+    buildCommand: pip install -r requirements.txt
     startCommand: python Renderbot.py
+    plan: free
+    autoDeploy: true
+    envVars:
+      - key: TOKEN
+        value: "python Renderbot.py"
