--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,9 @@ services:
   - type: web
     name: telegram-bot
     runtime: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+  pip install -r requirements.txt
+  playwright install
     startCommand: python Renderbot.py
     plan: free
     autoDeploy: true
